k8s/manifests/insights/engine-simulator/istio/authn/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: insights-engine-sim
spec:
  mtls:
    mode: STRICT
