k8s/manifests/insights/engine-simulator/istio/authn/destination-rules.yaml

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: default
  namespace: insights-engine-sim
spec:
  host: "*.insights-engine-sim.svc.cluster.local"   # scoped to this namespace's services
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
